# gtk-synce

./: AUTHORS  Makefile.am  NEWS  README  README.md  TODO  build_rpm.sh.in  build_tgz.sh.in  clean.sh  configure.in  gtk-synce.desktop  gtk-synce.spec.in  slack-desc
src/: Makefile.am  gtk-synce-callbacks.c  gtk-synce-callbacks.h  gtk-synce-interface.c  gtk-synce-interface.h  gtk-synce.c  synce-interface.c  synce-interface.h
